fix: globalError to show better error message
