# swagger.json
@@ -66,6 +66,75 @@
 					}
 				}
 			}
+		},
+		"/users/profile": {
+			"get": {
+				"summary": "Show profile of user",
+				"tags": ["Authenticated"],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Data of user profile"
+					},
+					"401": {
+						"description": "Unautorized user, try loggin"
+					},
+					"404": {
+						"description": "User profile not Found"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				}
+			},
+			"put": {
+				"summary": "Update profile of user",
+				"tags": ["Authenticated"],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"requestBody": {
+					"required": false,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserUpdate"
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "Data of user updated"
+					},
+					"401": {
+						"description": "User not authenticated"
+					}
+				}
+			},
+			"delete": {
+				"summary": "Delete profile of user",
+				"tags": ["Authenticated"],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Data of profile of user"
+					},
+					"401": {
+						"description": "User not authenticated"
+					}
+				}
+			}
 		}
 	},
 	"components": {
@@ -104,7 +173,23 @@
 					"email": "john.doe@gmail.com",
 					"password": "mirants@2025"
 				}
+			},
+			"UserUpdate": {
+				"type": "object",
+				"properties": {
+					"firstname": { "type": "string" },
+					"lastname": { "type": "string" },
+					"email": { "type": "string" },
+					"password": { "type": "string" }
+				},
+				"example": {
+					"firstname": "John",
+					"lastname": "Doe",
+					"email": "john.doe@gmail.com",
+					"password": "mirants@2025"
+				}
 			}
+
 		}
 	}
 }
